--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-      rel="stylesheet"
+      rel="stylesheet"test
     />
     <link rel="stylesheet" href="styles.css" />
   </head>
