--- a/index.html
+++ b/index.html
@@ -37,6 +37,20 @@
           </form>
         </div>
         <ul class="cardsList" data-list>
+          <li class="card">
+            <div>
+              <i class="far fa-check-square icon"></i>
+              <span class="task">Hacer curso de DOM</span>
+            </div>
+            <i class="fas fa-trash-alt trashIcon icon"></i>
+          </li>
+          <li class="card">
+            <div>
+              <i class="far fa-check-square icon"></i>
+              <span class="task">Hacer curso de git</span>
+            </div>
+            <i class="fas fa-trash-alt trashIcon icon"></i>
+          </li>
         </ul>
       </div>
     </main>
